챕터 9. 캡슐화 수정